<resources>
    <string name="app_name">Trains</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="prompt_creditcard">Credit Card Number (optional)</string>
    <string name="prompt_creditcard_date">Credit Card Date (optional)</string>

    <string name="action_login">Login</string>
    <string name="action_logout">Logout</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_login_register"><u>Do not have a login? Please Register</u></string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_update">Update</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Password must have letters and numbers and be at least 6 characters</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_card">Card number must be 16 digits</string>
    <string name="error_invalid_card_date">Invalid Date</string>
    <string name="error_expired_card">This card already expired</string>
    <string name="error_password_match">Password and Confirm Password do not match</string>
    <string name="error_conflict">Oops, that address is already taken</string>
    <string name="error_server">Internal Server Error</string>
    <string name="error_unauthorized">Invalid username or password</string>
    <string name="error_connection">Connection Error</string>

    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="saved_token">Token</string>
    <string name="saved_username">TrainsUsername</string>

    <string name="title_activity_calendar">Choose a Day</string>
    <string name="title_activity_schedule">Schedule</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="title_activity_ticket_detail">Ticket</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="main_title_label">Search for a Train</string>
    <string name="main_label_departure">From:</string>
    <string name="main_label_arrival">To:</string>
    <string name="detail_label_arrival">Arrival</string>
    <string name="detail_label_departure">Departure</string>

    <string name="timetable_backwards">Lisbon to Porto</string>
    <string name="timetable_forward">Porto to Lisbon</string>
    <string name="timetable_title">Timetables</string>
    <string name="timetable_extra">Timetable result</string>
    <string name="timetable_extra_way">Timetable way</string>

    <string name="saved_stations">Saved Stations</string>
    <string name="search_result">Trip Search Result</string>
    <string name="detail_trip">Detail Trip</string>
    <string name="departure_station_search">Dep Station Search</string>
    <string name="arrival_station_search">Arr Station Search</string>
    <string name="title_activity_results">ResultsActivity</string>

    <string name="extra_travel">extra_travel</string>
    <string name="extra_ticket">Ticket_ID</string>

    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="activity_ticket_detail_from">From: </string>
     <string name="activity_ticket_detail_departure">Departure Not Found</string>
     <string name="activity_ticket_detail_to">To: </string> 
    <string name="activity_ticket_detail_destination">Destination Not Found</string>
     <string name="activity_ticket_detail_dateTitle">Date:</string>
     <string name="activity_ticket_detail_date">Date Not Found</string>
     <string name="activity_ticket_detail_price">Price Not Found</string>
</resources>
