<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_ticket_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="trains.feup.org.trains.TicketDetailActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:id="@+id/img_qr_code_image"
            android:layout_width="match_parent"
            android:layout_weight="1" />

        <TableRow>
            <TextView
                android:id="@+id/ticket_departure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:ems="10"
                android:textStyle="bold"
                android:text="@string/activity_ticket_detail_departure"/>

            <TextView
                android:id="@+id/ticket_departure_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:ems="10"
                android:textStyle="bold"
                android:text="@string/activity_ticket_detail_date"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:ems="10"
                android:text="@string/activity_ticket_detail_to"
                android:textAlignment="center" />
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/ticket_destination"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:ems="10"
                android:textStyle="bold"
                android:text="@string/activity_ticket_detail_destination"/>
        </TableRow>



        <TableRow>
            <TextView/>
            <TextView
                android:id="@+id/ticket_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:textAlignment="textEnd"
                android:ems="10"
                android:text="@string/activity_ticket_detail_price"/>
        </TableRow>
    </TableLayout>
</RelativeLayout>
